# ogre-basic-app

./: CMakeLists.txt  main.cpp  plugins.cfg
